Fix layout on mobiles in cv-creator

--- a/app/components/CVCreator/CVForm.module.css
+++ b/app/components/CVCreator/CVForm.module.css
@@ -255,7 +255,8 @@
     flex-direction: column;
     box-shadow: 0 0 16px 1px rgba(0, 0, 0, 0.5);
     border-radius: 8px;
-    margin: 5rem 1rem 1rem 1rem;
+    margin: 5rem 1rem 1rem 2rem;
+    width: calc(100vw - 10rem);
   }
 
   .aboutDetails {
@@ -280,7 +281,7 @@
 
 @media only screen and (max-width: 768px) {
   .form {
-    width: calc("100vw");
+    width: calc(100vw - 7rem);
     margin: 5rem 0rem 1rem 1.5rem;
   }
 
@@ -310,7 +311,11 @@
 
 @media only screen and (max-width: 600px) {
   .form {
-    width: calc("100vw");
-    margin: 5rem 0.5rem 1rem 0.5rem;
+    width: calc(100vw - 0rem);
+    margin: 5rem 0rem 1rem 0rem;
+  }
+  .aside {
+    /* max-width: 100%; */
+    margin: 0;
   }
 }
